[package]

name = "rust-examples"
version = "0.0.1"
authors = ["Eliovir <eliovir@gmail.com>"]
default-run = "lang-pointers"

[dependencies.inifile]
path = "inifile"

[dependencies]
getopts = "0.2.14"
rand = "0.3"
tokio = { version = "0.2", features = ["macros"]}
warp = "0.2"

[[bin]]
name = "api-getopts"
path = "api-getopts.rs"

[[bin]]
name = "book-3_1-guessing_game"
path = "book-3_1-guessing_game.rs"

[[bin]]
name = "tutorial-tasks-02_3-arc"
path = "tutorial-tasks-02_3-arc.rs"

[[bin]]
name = "tutorial-04_2-pattern-matching"
path = "tutorial-04_2-pattern-matching.rs"

[[bin]]
name = "book-3_2-dining_philosophers"
path = "book-3_2-dining_philosophers.rs"

[[bin]]
name = "linked_list"
path = "linked_list.rs"

[[bin]]
name = 'green-thread-0'
path = "green-thread-0.rs"

[[bin]]
name = 'green-thread-1'
path = "green-thread-1.rs"

[[bin]]
name = 'lang-pointers'
path = "lang-pointers.rs"

[[bin]]
name = 'design_pattern-decorator'
path = "design_pattern-decorator.rs"

[[bin]]
name = 'tcp'
path = "tcp.rs"

[[bin]]
name = 'green-thread'
path = "green-thread-2.rs"

[[bin]]
name = 'binarytree'
path = "binarytree.rs"

[[bin]]
name = 'chat'
path = "chat.rs"

[[test]]
name = 'dry'
path = 'dry.rs'


